# CS544

COOL-Parser/: Readme.md  runParserTests.sh
COOL-Parser/parserOutputs/: assign.cl  assoc1.cl  assoc2.cl  assoc3.cl  assoc4.cl  attr0.cl  attr1.cl  attr2.cl  attr3.cl  attr4.cl  attr5.cl  attr6.cl  attr7.cl  bad1.cl  bad2.cl  bad3.cl  bad4.cl  block1.cl  block2.cl  case1.cl  case2.cl  case3.cl  div.cl  dynamicdispatch.cl  eq.cl  false.cl  if.cl  isvoid.cl  le.cl  let1.cl  let2.cl  let3.cl  let4.cl  lt.cl  manyArguments.cl  methodCall1.cl  methodCall2.cl  methodCall3.cl  methodCall4.cl  minus.cl  (+27 more)
COOL-Parser/src/cool/: Main.java
COOL-Scanner/: Readme.md
COOL-Scanner/src/cool/: Main.java
LLVM-IR/: README.md  cfg.sh  factorial-opt.ll  factorial.c  factorial.ll  moreControlFlow.c  moreControlFlow.ll  naiveSum.ll  points.c  points.ll  simple-opt.ll  simple.c  simple.ll  sum.ll
Optimization/: CMakeLists.txt  README.md
Optimization/adce/: ADCE.cpp  CMakeLists.txt
Optimization/licm/: CMakeLists.txt  LICM.cpp
Optimization/mba/: CMakeLists.txt  MBA.cpp
Optimization/peephole/: CMakeLists.txt  Peephole.cpp
Optimization/tests/: mba.c  mba.ll
Optimization/tests/licm/: licm_gep.ll  licm_operands_are_constant.ll  licm_operands_are_constant_div.ll  licm_operands_are_outside.ll  licm_operands_are_outside_div.ll  licm_safe_noDomination.ll  licm_store.ll  licm_unsafe_domination.ll  opt_licm_gep.ll  opt_licm_load.ll  opt_licm_operands_are_constant.ll  opt_licm_operands_are_constant_div.ll  runTests.sh  (+6 more)
RegAlloc/: README.md
RegAlloc/tests/: RegisterAllocatorTest.java
(+52 files in other folders)
